# pml-std

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cap.ts  cloud.ts  common.ts  database.ts  datetime.ts  deno.json  diff.ts  docker-compose.yml  drizzle.config.ts  kubernetes.ts  mcp-tools-server.ts  mcp-tools.ts  mod.ts  network.ts  qrcode.ts  resilience.ts  ssh.ts  text.ts
.github/workflows/: publish.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 10-2-static-argument-extraction.md  (+138 more)
config/: .mcp-servers.example.json  README.md  dag-scoring.schema.json  dag-scoring.yaml  local-alpha.schema.json  local-alpha.yaml  mcp-permissions.yaml  mcp-routing.json  spectral-clustering.schema.json  spectral-clustering.yaml  speculation_config.schema.json  speculation_config.yaml  workflow-patterns.json  workflow-templates.yaml
crates/: .gitignore  Cargo.toml
crates/casys_core/src/: lib.rs
crates/casys_core/tests/: graph_types.rs
crates/casys_engine/src/: lib.rs
crates/casys_engine/src/exec/: executor.rs
crates/casys_engine/src/index/: mod.rs  persistence.rs
crates/casys_engine/tests/: persistence_mock.rs  value_ext.rs
crates/casys_storage_fs/src/: lib.rs
lib/: README.md  algo.ts  build.ts  color.ts  geo.ts  http.ts  mcp-tools-server.ts  mcp-tools.ts  media.ts  path.ts  state.ts  sysinfo.ts
scripts/: check-caps.ts  clean-broken-caps.ts  cleanup-db.ts  export-traces-for-benchmark.ts  seed-operation-embeddings.ts
std/: agent.ts  crypto.ts  faker.ts  format.ts  json.ts  mod.ts  packages.ts  process.ts  transform.ts  types.ts
(+762 files in other folders)
